08Jul16=======================================================================
1. Add latest wpxloc.raw
2. Add CTY-2609
25Mar16=======================================================================
1. Rework DXCron::spawn command to use Mojo::IOLoop::ForkCall
04Jan16=======================================================================
1. Add CTY-2601 prefix file
02Jan16=======================================================================
1. fix new URL for sh/425 command
30Dec15=======================================================================
1. Add CTY-2516 prefix file
2. Try to stop and also reset node call user records back to 'S'
3. Fix multiple on_disc events in AsyncMsg.pm
02Jun15=======================================================================
1. Extend regex for quit to allow other commands starting in 'q'.
2. Add CTY-2506 prefix file
26May15=======================================================================
1. Add CTY-2506 prefix file
01Mar15=======================================================================
1. Add CTY-2503 prefix file
13Feb15=======================================================================
1. Fix problem with sh/dx <call> if people are logging spots to a SQL database
3. Added CTY-2502 prefixes. 
3. My late father would have been 102 today.
27Nov14=======================================================================
1. Add CTY-2415 prefix list
25Nov14=======================================================================
1. Add CTY-2414 prefix list
21Nov14=======================================================================
1. Add CTY-2413 prefix list
21Oct14=======================================================================
1. Add CTY-2011 prefixes
16Sep14=======================================================================
1. Add CTY2410 wpxloc.raw + cty.dat
2. remove autoflush from logs
16Sep14=======================================================================